interpreter/2-5/src/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
command' -> . command [ # ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 113
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 131
-- On command shift to state 133
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 1:
## Known stack suffix:
## TRUE
## LR(1) items:
literal -> TRUE . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production literal -> TRUE
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production literal -> TRUE
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 2:
## Known stack suffix:
## MATCH
## LR(1) items:
expr -> MATCH . expr WITH match_pattern [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 81
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 3:
## Known stack suffix:
## LPAR
## LR(1) items:
atomic_expr -> LPAR . expr RPAR [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
atomic_expr -> LPAR . expr COMMA expr tuple [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 72
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 4:
## Known stack suffix:
## LET
## LR(1) items:
expr -> LET . var EQ expr IN expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> LET . REC var var rec_expr IN expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> LET . REC var var EQ expr and_expr expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On REC shift to state 5
-- On ID shift to state 6
-- On var shift to state 67
## Reductions:

State 5:
## Known stack suffix:
## LET REC
## LR(1) items:
expr -> LET REC . var var rec_expr IN expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> LET REC . var var EQ expr and_expr expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On ID shift to state 6
-- On var shift to state 7
## Reductions:

State 6:
## Known stack suffix:
## ID
## LR(1) items:
var -> ID . [ ID EQ ]
## Transitions:
## Reductions:
-- On ID EQ
--   reduce production var -> ID

State 7:
## Known stack suffix:
## LET REC var
## LR(1) items:
expr -> LET REC var . var rec_expr IN expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> LET REC var . var EQ expr and_expr expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On ID shift to state 6
-- On var shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## LET REC var var
## LR(1) items:
expr -> LET REC var var . rec_expr IN expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> LET REC var var . EQ expr and_expr expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On ID shift to state 6
-- On EQ shift to state 9
-- On var shift to state 60
-- On rec_expr shift to state 64
## Reductions:

State 9:
## Known stack suffix:
## LET REC var var EQ
## LR(1) items:
expr -> LET REC var var EQ . expr and_expr expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
rec_expr -> EQ . expr [ IN ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 50
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 10:
## Known stack suffix:
## LBPAR
## LR(1) items:
atomic_expr -> LBPAR . RBPAR [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
atomic_expr -> LBPAR . expr lists [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On RBPAR shift to state 11
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 44
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 11:
## Known stack suffix:
## LBPAR RBPAR
## LR(1) items:
atomic_expr -> LBPAR RBPAR . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production atomic_expr -> LBPAR RBPAR
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production atomic_expr -> LBPAR RBPAR
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 12:
## Known stack suffix:
## INT
## LR(1) items:
literal -> INT . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production literal -> INT
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production literal -> INT
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 13:
## Known stack suffix:
## IF
## LR(1) items:
expr -> IF . expr THEN expr ELSE expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 39
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 14:
## Known stack suffix:
## ID
## LR(1) items:
atomic_expr -> ID . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production atomic_expr -> ID
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production atomic_expr -> ID
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 15:
## Known stack suffix:
## FUN
## LR(1) items:
expr -> FUN . ID ARROW expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On ID shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## FUN ID
## LR(1) items:
expr -> FUN ID . ARROW expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On ARROW shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## FUN ID ARROW
## LR(1) items:
expr -> FUN ID ARROW . expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 20
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 18:
## Known stack suffix:
## FALSE
## LR(1) items:
literal -> FALSE . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production literal -> FALSE
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production literal -> FALSE
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 19:
## Known stack suffix:
## literal
## LR(1) items:
atomic_expr -> literal . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production atomic_expr -> literal
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production atomic_expr -> literal
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 20:
## Known stack suffix:
## FUN ID ARROW expr
## LR(1) items:
expr -> FUN ID ARROW expr . [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> expr . CONS expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On CONS shift to state 21
## Reductions:
-- On WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC COMMA AND #
--   reduce production expr -> FUN ID ARROW expr
** End-of-stream conflict on WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND
**   There is a tension between
**   (1) reducing production expr -> FUN ID ARROW expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 21:
## Known stack suffix:
## expr CONS
## LR(1) items:
expr -> expr CONS . expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LPAR shift to state 3
-- On LET shift to state 4
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On expr shift to state 22
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 24
-- On app_expr shift to state 29
## Reductions:

State 22:
## Known stack suffix:
## expr CONS expr
## LR(1) items:
expr -> expr . CONS expr [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
expr -> expr CONS expr . [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On CONS shift to state 21
## Reductions:
-- On WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC COMMA AND #
--   reduce production expr -> expr CONS expr
** End-of-stream conflict on WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND
**   There is a tension between
**   (1) reducing production expr -> expr CONS expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 23:
## Known stack suffix:
## atomic_expr
## LR(1) items:
app_expr -> atomic_expr . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production app_expr -> atomic_expr
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production app_expr -> atomic_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 24:
## Known stack suffix:
## arith_expr
## LR(1) items:
arith_expr -> arith_expr . ADD arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . SUB arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . MUL arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . DIV arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . EQ arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . LT arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
expr -> arith_expr . [ WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND # ]
## Transitions:
-- On SUB shift to state 25
-- On MUL shift to state 27
-- On LT shift to state 33
-- On EQ shift to state 37
-- On DIV shift to state 31
-- On ADD shift to state 35
## Reductions:
-- On WITH THEN SSC RPAR RBPAR OR IN EOF END ELSE DSC CONS COMMA AND #
--   reduce production expr -> arith_expr
** End-of-stream conflict on WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production expr -> arith_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 25:
## Known stack suffix:
## arith_expr SUB
## LR(1) items:
arith_expr -> arith_expr SUB . arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On LPAR shift to state 3
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 26
-- On app_expr shift to state 29
## Reductions:

State 26:
## Known stack suffix:
## arith_expr SUB arith_expr
## LR(1) items:
arith_expr -> arith_expr . ADD arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . SUB arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr SUB arith_expr . [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . MUL arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . DIV arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . EQ arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . LT arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On MUL shift to state 27
-- On DIV shift to state 31
## Reductions:
-- On WITH THEN SUB SSC RPAR RBPAR OR LT IN EQ EOF END ELSE DSC CONS COMMA AND ADD #
--   reduce production arith_expr -> arith_expr SUB arith_expr
** End-of-stream conflict on WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production arith_expr -> arith_expr SUB arith_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 27:
## Known stack suffix:
## arith_expr MUL
## LR(1) items:
arith_expr -> arith_expr MUL . arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On LPAR shift to state 3
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 28
-- On app_expr shift to state 29
## Reductions:

State 28:
## Known stack suffix:
## arith_expr MUL arith_expr
## LR(1) items:
arith_expr -> arith_expr . ADD arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . SUB arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . MUL arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr MUL arith_expr . [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . DIV arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . EQ arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . LT arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production arith_expr -> arith_expr MUL arith_expr
** End-of-stream conflict on WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production arith_expr -> arith_expr MUL arith_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 29:
## Known stack suffix:
## app_expr
## LR(1) items:
app_expr -> app_expr . atomic_expr [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> app_expr . [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On LPAR shift to state 3
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On atomic_expr shift to state 30
## Reductions:
-- On WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production arith_expr -> app_expr
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production arith_expr -> app_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 30:
## Known stack suffix:
## app_expr atomic_expr
## LR(1) items:
app_expr -> app_expr atomic_expr . [ WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production app_expr -> app_expr atomic_expr
** End-of-stream conflict on WITH TRUE THEN SUB SSC RPAR RBPAR OR MUL LT LPAR LBPAR INT IN ID FALSE EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production app_expr -> app_expr atomic_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 31:
## Known stack suffix:
## arith_expr DIV
## LR(1) items:
arith_expr -> arith_expr DIV . arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On LPAR shift to state 3
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 32
-- On app_expr shift to state 29
## Reductions:

State 32:
## Known stack suffix:
## arith_expr DIV arith_expr
## LR(1) items:
arith_expr -> arith_expr . ADD arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . SUB arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . MUL arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . DIV arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr DIV arith_expr . [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . EQ arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . LT arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
## Reductions:
-- On WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD #
--   reduce production arith_expr -> arith_expr DIV arith_expr
** End-of-stream conflict on WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production arith_expr -> arith_expr DIV arith_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 33:
## Known stack suffix:
## arith_expr LT
## LR(1) items:
arith_expr -> arith_expr LT . arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On LPAR shift to state 3
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 34
-- On app_expr shift to state 29
## Reductions:

State 34:
## Known stack suffix:
## arith_expr LT arith_expr
## LR(1) items:
arith_expr -> arith_expr . ADD arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . SUB arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . MUL arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . DIV arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . EQ arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr . LT arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
arith_expr -> arith_expr LT arith_expr . [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On SUB shift to state 25
-- On MUL shift to state 27
-- On DIV shift to state 31
-- On ADD shift to state 35
## Reductions:
-- On WITH THEN SSC RPAR RBPAR OR LT IN EQ EOF END ELSE DSC CONS COMMA AND #
--   reduce production arith_expr -> arith_expr LT arith_expr
** End-of-stream conflict on WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD
**   There is a tension between
**   (1) reducing production arith_expr -> arith_expr LT arith_expr
**   without even requesting a lookahead token, and
**   (2) testing whether the lookahead token is a member of the above set.

State 35:
## Known stack suffix:
## arith_expr ADD
## LR(1) items:
arith_expr -> arith_expr ADD . arith_expr [ WITH THEN SUB SSC RPAR RBPAR OR MUL LT IN EQ EOF END ELSE DSC DIV CONS COMMA AND ADD # ]
## Transitions:
-- On TRUE shift to state 1
-- On LPAR shift to state 3
-- On LBPAR shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On FALSE shift to state 18
-- On literal shift to state 19
-- On atomic_expr shift to state 23
-- On arith_expr shift to state 36
-- On app_expr shift to state 29
## Reductions:
